Fix spacing

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+h1 {
+  margin-top: 10%;
+  margin-bottom: -25%;
+}
+
 h1, h2, p {
   text-align: center;
   color: white;
@@ -69,7 +74,7 @@ footer a:hover {
   display: flex;
   gap: 10%;
   flex-direction: column;
-  justify-content: center;
+
   background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
   background-size: 1800% 1800%;
 
@@ -97,6 +102,14 @@ footer a:hover {
       0%{background-position:0% 82%}
       50%{background-position:100% 19%}
       100%{background-position:0% 82%}
+}
+
+.wrapper {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .choices {
